--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "gitRepoUrl": "https://github.com/xjh22222228/nav",
+  "gitRepoUrl": "https://github.com/majinshan/nav",
   "provider": "Github",
   "branch": "main",
   "hashMode": true,
