--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "gitRepoUrl": "https://github.com/xjh22222228/nav",
   "provider": "Github",
   "branch": "main",
-  "hashMode": true,
+  "hashMode": false,
   "address": "",
   "password": "admin",
   "port": 7777,
